istio_demo/generic-echo/samples/egress/service-entry-mysql.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql
spec:
  hosts:
  - sampledb.svc
  ports:
  - number: 3308
    name: tcp
    protocol: TCP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
  - address: 10.0.1.101
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway-mysql
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 3308
      name: tcp
      protocol: TCP
    hosts:
    - 10.0.1.101
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-cnn-through-egress-gateway
spec:
  hosts:
  - 10.0.1.101
  gateways:
  - istio-egressgateway-mysql
  tcp:
  - match:
    - port: 3308
    route:
    - destination:
        host: sampledb.svc
---
